password reset text and input type

--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -22,6 +22,7 @@
             font-size: 0.9em;
             background-color: var(--gray-light-color);
             padding: 0 16px;
+            color: #666;
         }
         .flex2child {
             @apply(--layout-flex-2);
@@ -36,16 +37,16 @@
                 <template is="dom-if" if="[[user.hasPass]]">
                     <div class="flexchild">
                         <p>
-                            For security reasons, you have to fill in your current password, before reseting it.
+                            For security reasons, you have to fill in your current password, before changing it.
                         </p>
                         <p>
-                            If you forgot your password contact us at <a href="mailto:info@mist.io">info@mist.io</a>.
+                            <a href="#forgot-password">Forgot password?</a>
                         </p>
                     </div>
                     <div class="flex3child">
-                        <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
-                        <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
-                        <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
+                        <paper-input label="Current Password" required type="password" error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
+                        <paper-input label="New Password" required type="password" error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
+                        <paper-input label="Confirm New Password" required type="password" error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
                         <div class="bottom-actions">
                             <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
                         </div>
