--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -406,6 +406,7 @@
             background-color: #eaeaea;
             color: #a8a8a8;
             cursor: not-allowed;
+            margin: 0
         }
         
         ::content hr {
