styling feedback form

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -515,3 +515,10 @@
         </style>
     </template>
 </dom-module>
+<dom-module id="stepper">
+    <template>
+        <style>
+            
+        </style>
+    </template>
+</dom-module>
