accent color change

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -5,19 +5,6 @@
     <template>
         <style>
         :root {
-            /* informational colors */
-            --green-color: #69b46c;
-            --red-color: #d96557;
-            --orange-color: #e9a644;
-            --blue-color: #47b3e3;
-            --gray-dark-color: #cfd8dc;
-            --gray-light-color: #eceff1;
-            /* three primary colors */
-            --mist-dark-color: #263238;
-            --mist-light-color: #B0BEC5;
-            --mist-lighter-color: #eceff1;
-            /*accent color*/
-            --mist-blue: #0099cc;
             --primary-text-color: var(--light-theme-text-color);
             --primary-background-color: var(--light-theme-background-color);
             --secondary-text-color: var(--light-theme-secondary-color);
@@ -69,7 +56,7 @@
             /* --paper-indigo-100 */
             --dark-primary-color: #303f9f;
             /* --paper-indigo-700 */
-            --accent-color: #ff4081;
+            --accent-color: #039BE5;
             /* --paper-pink-a200 */
             --light-accent-color: #ff80ab;
             /* --paper-pink-a100 */
@@ -79,7 +66,7 @@
             --primary-color: #263238;
             --light-primary-color: #B0BEC5;
             --dark-primary-color: #eceff1;
-            --accent-color: #0099cc;
+            --accent-color: #2196F3;
             --light-accent-color: #ff80ab;
             --dark-accent-color: #f50057;
             /*
@@ -116,7 +103,7 @@
             --mist-light-color: #B0BEC5;
             --mist-lighter-color: #eceff1;
             /*accent color*/
-            --mist-blue: #0099cc;
+            --mist-blue: #039BE5;
         }
         
         .green {
@@ -582,6 +569,7 @@
             z-index: 1;
             font-size: 14px;
             opacity: 0.54;
+            margin-left: 8px;
         }
         
         .step.active a.container {
