update color palette

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -136,8 +136,8 @@
             color: #444;
         }
         
-        .mist-very-light {
-            background-color: var(--mist-very-light-color);
+        .mist-lighter {
+            background-color: var(--mist-lighter-color);
             color: #444;
         }
         
