rename pages / move login to separate page / add check to finished pages

--- a/app/elements/details-page-element.html
+++ b/app/elements/details-page-element.html
@@ -1,13 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
-<dom-module id="details-element">
+<dom-module id="details-page-element">
     <template>
         <style is="custom-style" include="forms"></style>
         <style include="shared-styles">
         :host {
             display: block;
         }
-        
+
         paper-material {
             display: block;
         }
@@ -62,7 +62,7 @@
         'use strict';
 
         Polymer({
-            is: 'details-element',
+            is: 'details-page-element',
 
             properties: {
                 user: {
