--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -108,10 +108,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="network-page-element.html">
 <link rel="import" href="network-add-element.html">
 <link rel="import" href="subnet-item-element.html">
-<link rel="import" href="login-element.html">
-<link rel="import" href="register-element.html">
-<link rel="import" href="details-element.html">
-<link rel="import" href="password-element.html">
+<link rel="import" href="login-page-element.html">
+<link rel="import" href="register-page-element.html">
+<link rel="import" href="details-page-element.html">
+<link rel="import" href="password-page-element.html">
 <link rel="import" href="plans-list-element.html">
 <link rel="import" href="plan-item-element.html">
 <link rel="import" href="feedback-page-element.html">
