--- a/app/elements/password-page-element.html
+++ b/app/elements/password-page-element.html
@@ -1,13 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
-<dom-module id="password-element">
+<dom-module id="password-page-element">
     <template>
         <style is="custom-style" include="forms"></style>
         <style include="shared-styles">
         :host {
             display: block;
         }
-        
+
         paper-material {
             display: block;
         }
@@ -53,7 +53,7 @@
                     </div>
                 </template>
             </div>
-            
+
             <template is="dom-if" if="[[!user.hasPass]]">
                 <div class="text-center">
                     <paper-button raised on-tap="_setPassword">Set Password</paper-button>
@@ -68,7 +68,7 @@
         'use strict';
 
         Polymer({
-            is: 'password-element',
+            is: 'password-page-element',
 
             properties: {
                 user: {
