--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -74,6 +74,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'styling-mist';
     });
     
+    page('/dashboard', function() {
+      app.route = 'dashboard';
+    });
+
     page('/add-cloud', function() {
       app.route = 'add-cloud';
     });
