--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Styling Mist</span>
           </a>
 
+          <a data-route="dashboard" href="/dashboard">
+            <iron-icon icon="dashboard"></iron-icon>
+            <span>Dashboard</span>
+          </a>
+
           <a data-route="add-cloud" href="/add-cloud">
             <iron-icon icon="cloud"></iron-icon>
             <span>Add Cloud</span>
@@ -477,6 +482,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <styling-solutions-page-element data-route="styling-solutions"></styling-solutions-page-element>
 
             <styling-mist data-route="styling-mist"></styling-mist>
+
+            <dashboard-page-element data-route="dashboard"></dashboard-page-element>
 
             <cloud-add-element data-route="add-cloud"></cloud-add-element>
 
