--- a/app/elements/styling-mist.html
+++ b/app/elements/styling-mist.html
@@ -187,10 +187,9 @@
                     <section class="section" id="mistdropdowns">
                         <div class="center">
                             <h2>Drop-downs</h2>
-                            <p>Dropdowns don't currently accept styling outside of app forms. Needs to be checked</p>
-                            <app-forms>
-                                <form is="iron-form" id="form1">
-                                    <paper-dropdown-menu label="Provider">
+                            <p><del>Dropdowns don't currently accept styling outside of app forms. Needs to be checked</del></p>
+                            
+                            <paper-dropdown-menu label="Provider">
                                         <paper-menu class="dropdown-content">
                                             <paper-item>EC2</paper-item>
                                             <paper-item>Docker</paper-item>
@@ -198,8 +197,6 @@
                                             <paper-item>Linode</paper-item>
                                         </paper-menu>
                                     </paper-dropdown-menu>
-                                </form>
-                            </app-forms>
                         </div>
                     </section>
                     <section class="section" id="comingnext">
