add team members list

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -127,7 +127,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="token-item-element.html">
 <link rel="import" href="token-add-element.html">
 <link rel="import" href="user-menu-element.html">
-<link rel="import" href="users.html">
+<link rel="import" href="members-list-element.html">
+<link rel="import" href="member-item-element.html">
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
