--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page('/styling-mist', function() {
       app.route = 'styling-mist';
     });
-    
+
     page('/dashboard', function() {
       app.route = 'dashboard';
     });
@@ -177,6 +177,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     page('/tokens', function() {
       app.route = 'tokens';
+    });
+
+    page('/members', function() {
+      app.route = 'members';
     });
 
     // 404
