members add / edit options

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -129,6 +129,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="user-menu-element.html">
 <link rel="import" href="members-list-element.html">
 <link rel="import" href="member-item-element.html">
+<link rel="import" href="member-page-element.html">
+<link rel="import" href="member-add-element.html">
+<link rel="import" href="member-edit-element.html">
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
