--- a/app/elements/members-list-element.html
+++ b/app/elements/members-list-element.html
@@ -69,6 +69,8 @@
     </paper-card>
 
     <paper-fab id="addBtn" icon="add" on-tap="_openAddMemberModal"></paper-fab>
+    <member-add-element></member-add-element>
+    <member-edit-element member="[[selectedMember]]"></member-edit-element>
   </template>
   <script>
     (function() {
