--- a/app/index.html
+++ b/app/index.html
@@ -371,7 +371,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </a>
 
           <a data-route="members" href="/members">
-            <iron-icon icon="communication:vpn-key"></iron-icon>
+            <iron-icon icon="supervisor-account"></iron-icon>
             <span>Members List</span>
             <iron-icon icon="done" class="done-icon"></iron-icon>
           </a>
@@ -499,6 +499,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <tokens-list-element data-route="tokens"></tokens-list-element>
 
             <members-list-element data-route="members"></members-list-element>
+
+            <member-page-element data-route="member" id="[[params.id]]"></member-page-element>
           </iron-pages>
         </div>
       </paper-scroll-header-panel>
