--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -183,6 +183,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'members';
     });
 
+    page('/members/:id', function(data) {
+      app.route = 'member';
+      app.params = data.params;
+    });
+
     // 404
     page('*', function() {
       app.$.toast.text = 'Can\'t find: ' + window.location.href + '. Redirected you to Home Page';
