--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -132,6 +132,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="member-page-element.html">
 <link rel="import" href="member-add-element.html">
 <link rel="import" href="member-edit-element.html">
+<link rel="import" href="policies-list-element.html">
+<link rel="import" href="policy-item-element.html">
+<link rel="import" href="policy-add-element.html">
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
