--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -188,6 +188,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.params = data.params;
     });
 
+    page('/policies', function() {
+      app.route = 'policies';
+    });
+
+    page('/add-policy', function() {
+      app.route = 'add-policy';
+    });
+
     // 404
     page('*', function() {
       app.$.toast.text = 'Can\'t find: ' + window.location.href + '. Redirected you to Home Page';
