--- a/app/index.html
+++ b/app/index.html
@@ -364,7 +364,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a data-route="feedback" href="/feedback">
             <iron-icon icon="communication:comment"></iron-icon>
             <span>Feedback</span>
-            <iron-icon icon="check" class="done-icon"></iron-icon>
+            <iron-icon icon="done-all" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="subscriptions" href="/subscriptions">
